Fix content overflowing with legacy scrollbars

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -30,14 +30,14 @@
 }
 
 html {
-  min-height: 100dvh;
-  min-width: 100dvw;
+  height: 100%;
+  width: 100%;
   margin: 0;
 }
 
 body {
   margin: 0;
-  min-height: 100dvh;
+  min-height: 100%;
   background-color: var(--bg0);
   color: var(--fg);
   font-family: var(--font-main);
